# ValCraft-Official-Game-

./: .gitignore  CMakeLists.txt  NOTICE  README.md  valcraft_hud_inventory_hotbar_refonte.patch  valcraft_water_fix.patch  valcraft_water_hd.patch  valcraft_water_overhaul.patch
.github/workflows/: perf.yml  strict.yml
scripts/: check.ps1  perf.ps1
src/: main.cpp
src/app/: DeathScreen.h  Game.cpp  Game.h  GameBranding.h  GameLoop.h  GameOptions.cpp  GameOptions.h  Hotbar.h  InputBindings.h  InventoryMenu.h  PauseMenu.h  PerformanceReport.h
src/creatures/: CreatureGeometry.cpp  CreatureGeometry.h  CreatureSystem.cpp  CreatureSystem.h  CreatureTypes.h
src/gameplay/: ItemDropSystem.cpp  ItemDropSystem.h  PlayerController.cpp  PlayerController.h
src/player/: PlayerGeometry.cpp  PlayerGeometry.h
src/render/: HotbarLayout.h  Renderer.cpp  Renderer.h  ShadowCulling.h
src/world/: Block.h  BlockVisuals.cpp  BlockVisuals.h  Chunk.cpp  Chunk.h  ChunkMesher.cpp  ChunkMesher.h  Environment.cpp  Environment.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
tests/: AppTests.cpp  CreatureTests.cpp  PlayerTests.cpp  RenderTests.cpp  TestUtils.h  WorldTests.cpp
tools/hooks/: pre-push.example.ps1
